--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -28,6 +28,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+		<DefaultLanguage>es</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -42,12 +43,31 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
+		<MauiImage Update="Resources\Images\rincon_login.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Splash\%24placeholder%24.scale-100.png" />
+	  <None Remove="Resources\Splash\%24placeholder%24.scale-125.png" />
+	  <None Remove="Resources\Splash\%24placeholder%24.scale-150.png" />
+	  <None Remove="Resources\Splash\%24placeholder%24.scale-200.png" />
+	  <None Remove="Resources\Splash\%24placeholder%24.scale-400.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Resources\Splash\$placeholder$.scale-100.png" />
+	  <Content Include="Resources\Splash\$placeholder$.scale-125.png" />
+	  <Content Include="Resources\Splash\$placeholder$.scale-150.png" />
+	  <Content Include="Resources\Splash\$placeholder$.scale-200.png" />
+	  <Content Include="Resources\Splash\$placeholder$.scale-400.png" />
 	</ItemGroup>
 
 	<ItemGroup>
