--- a/Rincon.DataAccess/Rincon.DataAccess.csproj
+++ b/Rincon.DataAccess/Rincon.DataAccess.csproj
@@ -18,8 +18,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="6.0.1" />
+	  <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
