--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -112,6 +112,7 @@
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.9" />
+	  <PackageReference Include="Mopups" Version="1.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -160,6 +161,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="CustomPopups\ConfirmAddStockPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\CheckinPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
