--- a/Rincon/Platforms/MacCatalyst/Info.plist
+++ b/Rincon/Platforms/MacCatalyst/Info.plist
@@ -26,5 +26,12 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>external-accessory</string>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
