--- a/Rincon.Common/Rincon.Common.csproj
+++ b/Rincon.Common/Rincon.Common.csproj
@@ -25,6 +25,8 @@
 	  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.4" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
 	</ItemGroup>
 
 	<ItemGroup>
