--- a/Rincon.DataAccess/Rincon.DataAccess.csproj
+++ b/Rincon.DataAccess/Rincon.DataAccess.csproj
@@ -22,6 +22,8 @@
 	  <PackageReference Include="FlexLabs.EntityFrameworkCore.Upsert" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
 	</ItemGroup>
 
 	<ItemGroup>
