--- a/Rincon.Models/Rincon.Models.csproj
+++ b/Rincon.Models/Rincon.Models.csproj
@@ -20,4 +20,8 @@
 	  <MtouchInterpreter>all</MtouchInterpreter>
 	  <MtouchLink>None</MtouchLink>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.20" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
+	</ItemGroup>
 </Project>
