--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -99,6 +99,9 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		<MauiImage Update="Resources\Images\working_page.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -107,6 +110,8 @@
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-150.png" />
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-200.png" />
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-400.png" />
+	  <None Remove="Resources\Images\drop_down.svg" />
+	  <None Remove="Resources\Images\working_page.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -122,6 +127,10 @@
 	  <PackageReference Include="itext7" Version="8.0.3" />
 	  <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.4" />
 	  <PackageReference Include="Mopups" Version="1.3.1" />
+	  <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.10" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.10" />
+	  <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.0.0" />
+	  <PackageReference Include="CommunityToolkit.Maui" Version="7.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -208,4 +217,12 @@
 	  <PackageReference Update="Microsoft.Maui.Controls" Version="8.0.20" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <BundleResource Include="Resources\Images\drop_down.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </BundleResource>
+	  <BundleResource Include="Resources\Images\working_page.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </BundleResource>
+	</ItemGroup>
 </Project>
