--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -39,10 +39,10 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128">
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" BaseSize="128,128">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</MauiSplashScreen>
 
@@ -120,6 +120,9 @@
 		<MauiImage Update="Resources\Images\splash.svg">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</MauiImage>
+		<MauiImage Update="Resources\Images\rincon_white.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -136,6 +139,16 @@
 	  <None Remove="Resources\Images\check_icon.svg" />
 	  <None Remove="Resources\Images\alert_icon.svg" />
 	  <None Remove="Resources\Images\splash.svg" />
+	  <None Remove="Resources\Fonts\Inter-Black.ttf" />
+	  <None Remove="Resources\Fonts\Inter-Bold.ttf" />
+	  <None Remove="Resources\Fonts\Inter-ExtraBold.ttf" />
+	  <None Remove="Resources\Fonts\Inter-ExtraLight.ttf" />
+	  <None Remove="Resources\Fonts\Inter-Light.ttf" />
+	  <None Remove="Resources\Fonts\Inter-Medium.ttf" />
+	  <None Remove="Resources\Fonts\Inter-Regular.ttf" />
+	  <None Remove="Resources\Fonts\Inter-SemiBold.ttf" />
+	  <None Remove="Resources\Fonts\Inter-Thin.ttf" />
+	  <None Remove="Resources\Images\rincon_white.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -256,6 +269,18 @@
 	  <BundleResource Include="Resources\Images\check_icon.svg" />
 	  <BundleResource Include="Resources\Images\alert_icon.svg" />
 	  <BundleResource Include="Resources\Images\splash.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </BundleResource>
+	  <BundleResource Include="Resources\Fonts\Inter-Black.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-Bold.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-ExtraBold.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-ExtraLight.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-Light.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-Medium.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-Regular.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-SemiBold.ttf" />
+	  <BundleResource Include="Resources\Fonts\Inter-Thin.ttf" />
+	  <BundleResource Include="Resources\Images\rincon_white.svg">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </BundleResource>
 	</ItemGroup>
