Recovery password and quit dark mode

--- a/Rincon/Platforms/MacCatalyst/Info.plist
+++ b/Rincon/Platforms/MacCatalyst/Info.plist
@@ -32,6 +32,9 @@
 		<string>external-accessory</string>
 		<string>fetch</string>
 		<string>processing</string>
+		<string>bluetooth-central</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
