--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -240,6 +240,9 @@
 	  <MauiXaml Update="Pages\SynchronizationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Condition=" '$(EnableDefaultXamlItems)' == 'true' " Update="Pages\CheckinPage %28copiar%29.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
