--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -48,6 +48,12 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
+		<MauiImage Update="Resources\Images\account_brawn.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
+		<MauiImage Update="Resources\Images\account.svg">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</MauiImage>
 		<MauiImage Update="Resources\Images\add_direct_home.svg">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</MauiImage>
@@ -150,6 +156,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\account_brawn.svg" />
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-100.png" />
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-125.png" />
 	  <None Remove="Resources\Splash\%24placeholder%24.scale-150.png" />
@@ -209,6 +216,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="CustomPopups\MenuPage.xaml.cs">
+	    <DependentUpon>MenuPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="CustomPopups\AddNotePage.xaml.cs">
+	    <DependentUpon>AddNotePage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\CheckinPage.xaml.cs">
 	    <DependentUpon>CheckinPage.xaml</DependentUpon>
 	  </Compile>
@@ -248,6 +261,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="CustomPopups\MenuPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="CustomPopups\AddNotePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="CustomPopups\ConfirmAddStockPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
