--- a/Rincon/Rincon.csproj
+++ b/Rincon/Rincon.csproj
@@ -222,6 +222,9 @@
 	  <Compile Update="CustomPopups\AddNotePage.xaml.cs">
 	    <DependentUpon>AddNotePage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="CustomPopups\SuccessEditUserPage.xaml.cs">
+	    <DependentUpon>SuccessEditUserPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Pages\CheckinPage.xaml.cs">
 	    <DependentUpon>CheckinPage.xaml</DependentUpon>
 	  </Compile>
@@ -268,6 +271,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="CustomPopups\ConfirmAddStockPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="CustomPopups\SuccessEditUserPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\CheckinPage.xaml">
